workloads/nestarmv.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestarmv7
  namespace: demo
  labels:
    app: podinfo

spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: nestarmv7
  template:
    metadata:
      labels:
        app: nestarmv7
    spec:
      containers:
      - name: nestarmv7
        image: 192.168.1.115:5000/coazze/testnest:1.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        command:
        - npm
        - start
        resources:
          limits:
            cpu: 1000m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
