workloads/testnest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nest-test
  namespace: demo
spec:
  containers:
  - name: nest-test
    image: 192.168.1.115:5000/coazze/testnest:latest
    command:
      - npm
      - start
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
