workloads/nestarmvzingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nestarmv7
  namespace: demo
  annotations:
      ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: nestarmv7
          servicePort: 3000
